--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -18,38 +18,62 @@
         <div class="px-4">
           <div class="main-content">
             <div class="row">
-              <div class="col-md-8">
+              <div class="col-md-5">
                 <div class="card">
                   <div class="card-header">
-                    <h5 class="title">Calendario de rutina</h5>
+                    <h5 class="title">Calendario de rutinas</h5>
                   </div>
                   <div class="card-body">
                     <form>
                       <article class="sample-column calendar-wrapper">
-                        <igx-calendar #calendar locale="ES"  weekstart="1" (selected)="onSelection($event)">
+                        <igx-calendar #calendar locale="ES" weekstart="1" (selected)="onSelection($event)">
                         </igx-calendar>
                       </article>           
                     </form>
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-7">
                 <div class="card card-user">
                   <div class="card-body">
-                    <div class="author">
-                      <a href="#">
-                        <img class="avatar border-gray" src="../assets/img/mike.jpg" alt="...">
-                        <h5 class="title">Mike Andrew</h5>
-                      </a>
-                      <p class="description">
-                        {{currentDate.dateRoutine}}
-                      </p>
-                    </div>
-                    <p class="description text-center">
-                      "Lamborghini Mercy
-                      <br> Your chick she so thirsty
-                      <br> I'm in that two seat Lambo"
-                    </p>
+                    <ul class="code-editor-options-menu" *ngFor="let rou of routinesSelected">
+                      <div class="container container rounded">
+                        <div [ngClass]="'content-transparent-avanzado'">
+                          <p style=" color:rgb(0, 11, 41); font-size:25px; text-align:center;">
+                            {{rou.nameRoutine}}
+                          </p>
+                          <div class="row">
+                            <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
+                              <div class="card border-0" [ngClass]="'card-transparent'">
+                                <div class="card border-0" 
+                                      style="text-transform:uppercase; height:0.8rem; text-align:center; color:rgb(0, 0, 0); font-size:70%;">
+                                  {{dat.processExercise.nameExercise}}
+                                </div>
+                                <div class="card-body">
+                                  <i class="ni ni-user-run"></i> <i> 
+                                    {{dat.repetitions}} repeticiones 
+                                  </i> <br>
+                                  <i class="bi bi-arrow-clockwise"> 
+                                    {{dat.series}} series 
+                                  </i> <br>
+                                  <i class="bi bi-trophy"> 
+                                    {{dat.processExercise.mainMuscle}}
+                                  </i> <br>
+                                  <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" target="_blank" style="color:rgb(0, 30, 128)"> 
+                                    <i class="bi bi-youtube"> 
+                                      Video explicativo
+                                    </i>
+                                  </a><br>
+                                  <i class="bi bi-info-circle"> 
+                                    {{dat.processExercise.description}}
+                                  </i> 
+                                </div>
+                              </div><br>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </ul>
                   </div>
                 </div>
               </div>
