--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -10,8 +10,26 @@
     box-shadow: elevation($elevation: 4);
 }
 
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
+.card-transparent{
+    background:transparent;
+    border:3px solid rgb(23, 0, 107) !important;
+    width:10rem; 
+    height:13rem;
+}
+
+.content-transparent{
+    background:transparent;
+    background-color: rgba(255,255,255,0.2);
+    font-weight: bolder;
+}
+
+
+
+
 $custom-calendar-theme: calendar-theme(
-    $header-background: #345779,
+   
     $content-background: #fdfdfd,
     $header-text-color: #ffffff,
     $date-current-text-color: #2dabe8,
