--- a/src/app/routine/routine.component.html
+++ b/src/app/routine/routine.component.html
@@ -118,8 +118,33 @@
                 </div><br>
               </ul>
             </div>
-            <div style="text-transform:uppercase; height:5rem; text-align: center;">
-              <a href="javascript:void(0)" (click)="initRoutine(rou, classic2)" class="btn btn-warning mt-4">Iniciar Rutina</a>
+            <div class="row">
+              <div class="col" style="text-align:center">
+                <h1>Seleccione el dia de la semana en el que quiera realizar su rutina y su duración: </h1>
+                <div ngbDropdown class="d-inline-block">
+                  <div class="row">
+                    <button type="button" class="btn btn-success mt-5.2" id="dropdownBasic1" ngbDropdownToggle> {{ getValuesdaySelectedInRoutine(rou) }} </button>
+                    <div ngbDropdownMenu aria-labelledby="dropdownConfig">
+                      <ul class="code-editor-options-menu">
+                        <li *ngFor="let dia of getValues(weekdays)" (click)="selectValue(dia, rou)">
+                          <button ngbDropdownItem>{{dia}}</button>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="form-group has-success mt-2" *ngIf="validationValueWeeks(rou)">
+                      <input type="number" id="validationValueWeeks" [ngModel]="weeksRoutine.get(rou.id)" (change)="existValueWeeksRoutine($event, rou)" name="weeksRoutine" class="form-control" />
+                    </div>
+                    <div class="form-group has-danger" *ngIf="!validationValueWeeks(rou)">
+                      <input type="number" placeholder="Ingrese cant. de semanas" [ngModel]="weeksRoutine.get(rou.id)" (change)="existValueWeeksRoutine($event, rou)" name="weeksRoutine" class="form-control is-invalid" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div> <br>
+            <div style="text-transform:uppercase; height:5rem; text-align:center;">
+              <button type="button" class="btn btn-primary" href="javascript:void(0)" (click)="initRoutine(rou, classic2)" [disabled]="!validationDayAndNameWeeks(rou)">
+                Iniciar Rutina
+              </button>
             </div>
             <ng-template #classic2 let-c="close" let-d="dismiss">
               <div class="modal-content bg-gradient-danger">
@@ -146,4 +171,5 @@
         </div>
     </ul>
   </section>
+  <br><br><br><br><br><br><br><br><br>
 </main>
