--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -14,14 +14,14 @@
         <span class="span-50"></span>
         <span class="span-100"></span>
       </div>
-      <div class="container">
-        <div class="px-4">
+      <div class="container container rounded">
+        <div class="px-20">
           <div class="main-content">
-            <div class="row">
-              <div class="col-md-5">
-                <div class="card">
+            <div class="row justify-content-center">
+              <div class="col-md-8">
+                <div class="card" >
                   <div class="card-header">
-                    <h5 class="title">Calendario de rutinas</h5>
+                    <h5 class="title" style="font-size:200%;">Calendario de rutinas</h5>
                   </div>
                   <div class="card-body">
                     <form>
@@ -33,54 +33,72 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-7">
-                <div class="card card-user">
-                  <div class="card-body">
-                    <ul class="code-editor-options-menu" *ngFor="let rou of routinesSelected">
-                      <div class="container container rounded">
-                        <div [ngClass]="'content-transparent-avanzado'">
-                          <p style=" color:rgb(0, 11, 41); font-size:25px; text-align:center;">
-                            {{rou.nameRoutine}}
-                          </p>
-                          <div class="row">
-                            <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
-                              <div class="card border-0" [ngClass]="'card-transparent'">
-                                <div class="card border-0" 
-                                      style="text-transform:uppercase; height:0.8rem; text-align:center; color:rgb(0, 0, 0); font-size:70%;">
-                                  {{dat.processExercise.nameExercise}}
-                                </div>
-                                <div class="card-body">
-                                  <i class="ni ni-user-run"></i> <i> 
-                                    {{dat.repetitions}} repeticiones 
-                                  </i> <br>
-                                  <i class="bi bi-arrow-clockwise"> 
-                                    {{dat.series}} series 
-                                  </i> <br>
-                                  <i class="bi bi-trophy"> 
-                                    {{dat.processExercise.mainMuscle}}
-                                  </i> <br>
-                                  <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" target="_blank" style="color:rgb(0, 30, 128)"> 
-                                    <i class="bi bi-youtube"> 
-                                      Video explicativo
-                                    </i>
-                                  </a><br>
-                                  <i class="bi bi-info-circle"> 
-                                    {{dat.processExercise.description}}
-                                  </i> 
-                                </div>
-                              </div><br>
-                            </ul>
-                          </div>
-                        </div>
+            </div>
+          </div>
+        </div><br>
+      </div>
+      <div *ngIf="routinesSelected.length >0">
+        <h2 class="display-3 mb-0"  style="color:rgb(255, 255, 255); font-size:20px; text-align:center; font-weight: bolder;">
+          {{ dateSelected }}
+        </h2>
+      </div>
+      <ul class="code-editor-options-menu" *ngFor="let rou of routinesSelected">
+        <div class="container container rounded">
+          <div [ngClass]="'content-transparent'">
+            <div class="content">
+              <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="currentRoutineIsUpdate(rou)">
+                <span class="alert-inner--icon"><i class="ni ni-like-2"></i></span>
+                <span class="alert-inner--text"><strong>Actualizado correctamente!</strong> Los ejercicios han sido actualizados de manera correcta!</span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="closeAlertIsUpdated(rou)">
+                  <span aria-hidden="true">×</span>
+                </button>
+              </div><br>
+              <div style="color:rgb(255, 255, 255); text-align:center; font-weight: bolder; text-transform:uppercase;">
+                <a (click)="setOpenDetail(rou,1)" class="bdropdown-item" style="color:rgb(255, 255, 255); font-size:170%; text-align:end; text-transform:uppercase;" *ngIf="!getOpenDetail(rou)">
+                  {{rou.nameRoutine}} <i class="bi bi-caret-down-fill"> </i>
+                </a>
+                <a (click)="setOpenDetail(rou,0)" class="bdropdown-item" style="color:rgb(255, 255, 255); font-size:170%; text-align:end; text-transform:uppercase;" *ngIf="getOpenDetail(rou)">
+                  {{rou.nameRoutine}} <i class="bi bi-caret-up-fill"></i>
+                </a>
+              </div><br>
+              <div *ngIf="getOpenDetail(rou)">
+                <div class="row justify-content-center" >
+                  <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
+                    <div class="card border-light mb-10" [ngClass]="'card-transparent'">
+                      <div class="card-header bg-transparent justify-content-center border-0" 
+                            style="text-transform:uppercase; height:3.5rem; text-align: center; color:rgb(255, 255, 255);font-weight: bolder; font-size:17px;">
+                        {{dat.processExercise.nameExercise}}
                       </div>
-                    </ul>
-                  </div>
+                      <div class="card-body text-white">
+                        <p class="card-text" style="font-weight:bolder; font-size:15px; text-shadow: 2px 2px 5px rgb(110, 109, 109); height:6rem;">
+                          <i class="ni ni-user-run"></i> <i> 
+                            {{dat.repetitions}} repeticiones 
+                          </i> <br>
+                          <i class="bi bi-arrow-clockwise"> 
+                            {{dat.series}} series 
+                          </i> <br>
+                          <i class="bi bi-trophy"> 
+                          {{dat.processExercise.mainMuscle}}
+                          </i> <br>
+                          <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" target="_blank" style="color:rgb(0, 30, 128)"> 
+                            <i class="bi bi-youtube"> 
+                              Video explicativo
+                            </i>
+                          </a><br>
+                          <i class="bi bi-info-circle"> 
+                            {{dat.processExercise.description}}
+                          </i> 
+                        </p>
+                      </div>
+                    </div>
+                    <br>
+                  </ul>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </ul>
     </section>
   </div>
 </main>
