--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -64,7 +64,7 @@
                 </mat-form-field>
                 <mat-form-field class="full-width-input">
                   <input class="form-control" [type]="hide ? 'password' : 'text'" formControlName="password" matInput
-                    placeholder="Password" required />
+                    placeholder="Contraseña" required />
                   <button mat-icon-button matSuffix (click)="hide = !hide">
                     <mat-icon>
                       {{ hide ? "visibility_off" : "visibility" }}
@@ -77,7 +77,7 @@
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
                   <label class="custom-control-label" for=" customCheckLogin">
-                    <span>Remember me</span>
+                    <span>Recordarme</span>
                   </label>
                 </div>
                 <div class="text-center">
