--- a/src/app/routine-generated/routine-generated.component.html
+++ b/src/app/routine-generated/routine-generated.component.html
@@ -17,13 +17,39 @@
           <label for="name">Nombre de su nueva rutina: </label> <br>
           <input type="text" placeholder="Ingrese un nombre" [(ngModel)]="nameNewRoutine" name="nameNewRoutine" required size="60">
         </div>
+        <div class="row">
+          <div class="col" style="text-align:center">
+            <div ngbDropdown class="d-inline-block">
+              <h2 class="display-3 " style="color:rgb(252, 252, 252); font-size:15px; text-align:center;">
+                Ingrese la cantidad de semanas que quiere realizar la rutina:
+                <div class="form-group has-success mt-2" *ngIf="validationValueWeeks()">
+                  <input type="number" id="validationValueWeeks"  [(ngModel)]="weeksRoutine" name="weeksRoutine" class="form-control" />
+                </div>
+                <div class="form-group has-danger" *ngIf="!validationValueWeeks()">
+                  <input type="number" placeholder="Ingrese la cantidad de semanas entre 1 y 20" [(ngModel)]="weeksRoutine" name="weeksRoutine" class="form-control">
+                </div>
+                Seleccione el dia de la semana que quiere realizar esta rutina: 
+                <button type="button" style="vertical-align: middle" class="btn btn-success mt-5.2" id="dropdownBasic1" ngbDropdownToggle> 
+                  {{ getValuesdaySelectedInRoutine() }} 
+                </button>
+                <div ngbDropdownMenu aria-labelledby="dropdownConfig">
+                  <ul class="code-editor-options-menu">
+                    <li *ngFor="let dia of getValues(weekdays)" (click)="selectValue(dia)">
+                      <button ngbDropdownItem>{{dia}}</button>
+                    </li>
+                  </ul>
+                </div>
+              </h2>
+            </div>
+          </div>
+        </div> <br>
         <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="isVisible()">
           <a href="javascript:void(0)" (click)="createRoutine(classic3)" class="btn btn-success mt-0">
             Iniciar Rutina
           </a>
         </div>
-        <div style="color:rgb(255, 255, 255); text-transform:uppercase; height:5rem; text-align: center;" *ngIf="!isVisible()">
-          Debe ingresar el nombre de la rutina y seleccionar al menos un ejercicio.
+        <div style="color:rgb(255, 255, 255); text-transform:uppercase; height:4rem; text-align: center;" *ngIf="!isVisible()">
+          Debe ingresar el nombre de la rutina, ingresar el dia de la semana, duracion y seleccionar al menos un ejercicio.
         </div>
         <ng-template #classic3 let-c="close" let-d="dismiss">
           <div class="modal-content bg-gradient-danger">
