--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,7 @@
     <div class="container pt-lg-md">
       <div class="row justify-content-center">
         <div class="col-lg-5">
-          <ngb-alert class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
+          <ngb-alert class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage != ''">
             <span class="alert-inner--text"><strong>{{ errorMessage }}</strong></span>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
               <!-- <span aria-hidden="true">&times;</span> -->
@@ -63,7 +63,7 @@
                 </mat-form-field>
                 <mat-form-field class="full-width-input">
                   <input class="form-control" [type]="hide ? 'password' : 'text'" formControlName="password" matInput
-                    placeholder="Password" required />
+                    placeholder="Contraseña" required />
                   <button mat-icon-button matSuffix (click)="hide = !hide">
                     <mat-icon>
                       {{ hide ? "visibility_off" : "visibility" }}
@@ -73,7 +73,7 @@
                     {{ loginForm.errorMessage }}
                   </mat-error>
                 </mat-form-field>
-                <div class="row my-4">
+                <!--<div class="row my-4">
                   <div class="col-12">
                     <div class="custom-control custom-control-alternative custom-checkbox">
                       <input class="custom-control-input" id="customCheckRegister" type="checkbox">
@@ -84,7 +84,7 @@
                       </label>
                     </div>
                   </div>
-                </div>
+                </div>-->
                 <div class="text-center">
                   <button [disabled]="loginForm.baseForm.invalid" type="button"
                     class="btn btn-primary my-4 form-control" (click)="register()">Registrarse</button>
