Se agregaron mejoras en llamados a servicio

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -21,7 +21,7 @@
               <div class="col-md-8">
                 <div class="card" >
                   <div class="card-header">
-                    <h5 class="title" style="font-size:200%;">Calendario de rutinas</h5>
+                    <h5 class="title" style="font-size:200%;">Calendario de rutinas:</h5>
                   </div>
                   <div class="card-body">
                     <form>
